Add ordering by name, add title+student needs

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <label for="sciences">Sciences</label>
 
       <input type="checkbox" id="social" name="filter" value="Social Sciences" checked>
-      <label for="social">Social Scienes</label>
+      <label for="social">Social Sciences</label>
 
       <input type="checkbox" id="phc" name="filter" value="PHC" checked>
-      <label for="phc">PHC</label>
+      <label for="phc">Public Humanities Collaborative</label>
     </form>
 
     <table id="results" width="100%">
