--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <input type="checkbox" id="social" name="filter" value="Social Sciences" checked>
       <label for="social">Social Sciences</label>
 
-      <input type="checkbox" id="phc" name="filter" value="PHC" checked>
+      <input type="checkbox" id="phc" name="filter" value="Public Humanities Collaborative" checked>
       <label for="phc">Public Humanities Collaborative</label>
     </form>
 
